[gd_scene load_steps=11 format=3 uid="uid://mg4er2j18w6k"]

[ext_resource type="Script" path="res://Scripts/Enemy/EnemySpawner.gd" id="1_l4mj6"]
[ext_resource type="Script" path="res://Scripts/Enemy/EnemySpawner_Tool_ShowEnemyType.gd" id="2_ab7js"]
[ext_resource type="Texture2D" uid="uid://1ttyjcisx76r" path="res://Textures/Atlas/Goomba_AtlasTexture.tres" id="3_al0je"]
[ext_resource type="Texture2D" uid="uid://bnrksyonwajj7" path="res://Textures/Raw/img_spritesheet-enemies.png" id="4_hp0bn"]
[ext_resource type="Texture2D" uid="uid://dqall32v6lkdh" path="res://Textures/Raw/img_horizontal-arrows-32x32.png" id="4_koydy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yyqt5"]
atlas = ExtResource("4_hp0bn")
region = Rect2(114, 840, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldt5w"]
atlas = ExtResource("4_hp0bn")
region = Rect2(2, 433, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkqss"]
atlas = ExtResource("4_hp0bn")
region = Rect2(2, 357, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ite3a"]
atlas = ExtResource("4_koydy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vuw7"]
atlas = ExtResource("4_koydy")
region = Rect2(0, 0, 32, 32)

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_l4mj6")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -8)

[node name="ShowEnemyType" type="Node2D" parent="."]
texture_filter = 1
script = ExtResource("2_ab7js")

[node name="Displays" type="Node2D" parent="ShowEnemyType"]

[node name="Goomba" type="Sprite2D" parent="ShowEnemyType/Displays"]
visible = false
modulate = Color(1, 1, 1, 0.27451)
position = Vector2(0, -8)
texture = ExtResource("3_al0je")

[node name="FireSnake" type="Sprite2D" parent="ShowEnemyType/Displays"]
visible = false
modulate = Color(1, 1, 1, 0.27451)
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_yyqt5")

[node name="PiranhaPlant" type="Sprite2D" parent="ShowEnemyType/Displays"]
visible = false
modulate = Color(1, 1, 1, 0.27451)
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_ldt5w")

[node name="PileDriverMicroGoomba" type="Sprite2D" parent="ShowEnemyType/Displays"]
visible = false
modulate = Color(1, 1, 1, 0.27451)
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_kkqss")

[node name="SpawnDirection" type="Node2D" parent="ShowEnemyType"]
position = Vector2(0, -24)

[node name="Left" type="Sprite2D" parent="ShowEnemyType/SpawnDirection"]
modulate = Color(1, 1, 1, 0.196078)
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_ite3a")

[node name="Right" type="Sprite2D" parent="ShowEnemyType/SpawnDirection"]
visible = false
modulate = Color(1, 1, 1, 0.196078)
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_6vuw7")
flip_h = true

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
